--- a/TalonsParkourAdventure/app/src/main/res/layout/activity_title_screen.xml
+++ b/TalonsParkourAdventure/app/src/main/res/layout/activity_title_screen.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/cute_talon_no_title_bg"
-    tools:context="com.example.android.talonsparkouradventure.FullscreenActivity">
+    tools:context="com.example.android.talonsparkouradventure.TitleScreen">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
          is needed to present your content, e.g. VideoView, SurfaceView,
@@ -44,12 +44,13 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/skins_button"
+        android:layout_below="@+id/skins_button"
         android:fontFamily="casual"
         android:text="About"
+        android:textAppearance="@style/TextAppearance.AppCompat"
         android:textColor="@android:color/black"
-        android:textSize="30sp"
-        android:layout_below="@+id/skins_button"
-        android:layout_alignEnd="@+id/skins_button" />
+        android:textSize="30sp" />
 
     <Button
         android:id="@+id/skins_button"
@@ -61,6 +62,7 @@
         android:elevation="0dp"
         android:fontFamily="casual"
         android:text="Skins"
+        android:textAppearance="@style/TextAppearance.AppCompat"
         android:textColor="@android:color/black"
         android:textSize="30sp" />
 
@@ -79,16 +81,18 @@
         android:textColor="@android:color/black"
         android:textSize="30sp" />
 
-    <TextView
-        android:id="@+id/textView"
+    <Button
+        android:id="@+id/title_button"
+        style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
+        android:elevation="0dp"
         android:fontFamily="casual"
         android:text="Talon's Parkour Adventure"
-        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat"
         android:textColor="@android:color/black"
-        android:textSize="43sp"
-        android:layout_alignParentTop="true"
+        android:textSize="40sp"
+        android:layout_above="@+id/play_game_button"
         android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
