A lot of stuff.

--- a/TalonsParkourAdventure/app/src/main/res/layout/activity_game.xml
+++ b/TalonsParkourAdventure/app/src/main/res/layout/activity_game.xml
@@ -2,8 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/cute_talon_no_title_bg"
-    tools:context="com.example.android.talonsparkouradventure.MenuUi.SkinsScreen">
+    android:background="#0099cc"
+    tools:context="com.example.android.talonsparkouradventure.Game.Game.Game">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
          is needed to present your content, e.g. VideoView, SurfaceView,
@@ -14,6 +14,7 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:keepScreenOn="true"
+        android:text="@string/dummy_content"
         android:textColor="#33b5e5"
         android:textSize="50sp"
         android:textStyle="bold" />
