--- a/TalonsParkourAdventure/app/src/main/res/layout/activity_about_screen.xml
+++ b/TalonsParkourAdventure/app/src/main/res/layout/activity_about_screen.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/cute_talon_no_title_bg"
-    tools:context="com.example.android.talonsparkouradventure.AboutScreen">
+    tools:context="com.example.android.talonsparkouradventure.MenuUi.AboutScreen">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
          is needed to present your content, e.g. VideoView, SurfaceView,
@@ -14,11 +14,10 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:keepScreenOn="true"
-        android:text="@string/dummy_content"
         android:textColor="#33b5e5"
         android:textSize="50sp"
-        android:textStyle="bold"
-        android:visibility="invisible" />
+        android:textStyle="bold" />
+
 
     <!-- This FrameLayout insets its children based on system windows using
          android:fitsSystemWindows. -->
