--- a/TalonsParkourAdventure/app/src/main/res/layout/activity_game.xml
+++ b/TalonsParkourAdventure/app/src/main/res/layout/activity_game.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#0099cc"
-    tools:context="com.example.android.talonsparkouradventure.Game.Game.Game">
+    tools:context="com.example.android.talonsparkouradventure.Game.Game.TalonsParkourAdventure">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
          is needed to present your content, e.g. VideoView, SurfaceView,
@@ -14,7 +14,7 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:keepScreenOn="true"
-        android:text="@string/dummy_content"
+        android:text=""
         android:textColor="#33b5e5"
         android:textSize="50sp"
         android:textStyle="bold" />
