--- a/TalonsParkourAdventure/app/src/main/res/layout/activity_game.xml
+++ b/TalonsParkourAdventure/app/src/main/res/layout/activity_game.xml
@@ -2,12 +2,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0099cc"
     tools:context="com.example.android.talonsparkouradventure.Game.Game.TalonsParkourAdventure">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
          is needed to present your content, e.g. VideoView, SurfaceView,
          TextureView, etc. -->
+
+
     <TextView
         android:id="@+id/fullscreen_content"
         android:layout_width="match_parent"
@@ -19,12 +20,16 @@
         android:textSize="50sp"
         android:textStyle="bold" />
 
+
     <!-- This FrameLayout insets its children based on system windows using
          android:fitsSystemWindows. -->
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true">
+        android:fitsSystemWindows="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
         <RelativeLayout
             android:id="@+id/fullscreen_content_controls"
